[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["sejin-P <chunpark37@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.58.1"
uvicorn = "^0.11.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
